--- a/OnlineShopping/src/main/webapp/assets/css/myapp.css
+++ b/OnlineShopping/src/main/webapp/assets/css/myapp.css
@@ -54,30 +54,80 @@ body {
 }
 
 footer {
-	margin:0;
+	margin: 0;
 }
 
 /*Custom CSS styling*/
-
-.wrapper{
+.wrapper {
 	position: relative;
-	min-height: 100%	
+	min-height: 100%
 }
 
-.content{
-	padding-bottom:60px /*height of footer*/ 	
+.content {
+	padding-bottom: 60px /*height of footer*/
 }
 
-.footer{
+.footer {
 	position: absolute;
-	bottom:15px;
+	bottom: 15px;
 	height: 60px;
 }
 
-.dataTableImg{
+.dataTableImg {
 	width: 100px;
 	height: 100px;
 }
-.help-block{
-	color:#ff0000;
+
+.help-block {
+	color: #ff0000;
+}
+
+.adminDataTableImg {
+	height: 50px;
+	width: 50px;
+}
+/*Toogle switch*/
+.switch {
+	width: 50px;
+	height: 30px;
+	position: relative;
+	display: inline-block;
+}
+
+.switch input {
+	display: none;
+}
+
+.slider {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right : 0;
+	left: 0;
+	cursor: pointer;
+	background-color: #ccc;
+	border-radius: 30px;
+	transition: .5s;
+	right: 0;
+}
+
+.slider:before {
+	position: absolute;
+	background-color: #fff;
+	height: 20px;
+	width: 20px;
+	content: "";
+	left: 5px;
+	bottom: 5px;
+	border-radius: 50%;
+	transition: .5s;
+}
+
+input:checked+.slider {
+	background-color: #1863E6;
+}
+
+input:checked+.slider:before {
+	transform: translateX(20px);
+}
 }
